--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -32,9 +32,9 @@ jobs:
       matrix:
         include:
           - os: windows-latest
-            powershell: powershell
+            SHELL: powershell
           - os: ubuntu-latest
-            powershell: pwsh
+            SHELL: pwsh
     runs-on: ${{ matrix.os }}
     needs: build
     steps:
@@ -45,7 +45,7 @@ jobs:
           name: psyml
           path: psyml
       - name: Perform Pester tests
-        shell: ${{ matrix.powershell }}
+        shell: ${{matrix.SHELL}}
         run: |
           Import-Module ./psyml/psyml
           $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
