--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -30,11 +30,7 @@ jobs:
   test:
     strategy:
       matrix:
-        shell: [pwsh]
         os: [windows-latest, ubuntu,latest]
-        include:
-          - os: windows-latest
-            shell: powershell
     runs-on: ${{ matrix.os }}
     needs: build
     steps:
@@ -44,8 +40,22 @@ jobs:
         with:
           name: psyml
           path: psyml
+      # it seems that shell parameter cannot be parametrized
       - name: Perform Pester tests
-        shell: ${{ matrix.shell }}
+        if: matrix.os == 'ubuntu-latest'
+        shell: pwsh
+        run: |
+          Import-Module ./psyml/psyml
+          $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
+
+          if ($tests.Failed.Count -gt 0) {
+            Write-Error "There were $($tests.Failed.Count) errors total." -ErrorAction Stop
+          } else {
+            Write-Output "There were $($tests.Failed.Count) errors total."
+          }
+      - name: Perform Pester tests
+        if: matrix.os == 'windows-latest'
+        shell: powershell
         run: |
           Import-Module ./psyml/psyml
           $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
