fixed ubuntu os name

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu,latest]
+        os: [windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     needs: build
     steps:
