--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -19,6 +19,10 @@ jobs:
         run: dotnet build --configuration Release --no-restore --framework netstandard2.1
       - name: Build net4.8
         run: dotnet build --configuration Release --no-restore --framework net4.8
+      - name: Copy .xml files to netstandard2.1 output directory # as XmlDoc2CmdletDoc works currently only on net4.8
+        shell: pwsh
+        run: |
+          Get-ChildItem ./artifacts/net4.8 -Filter *.xml | Copy-Item -Destination ./artifacts/netstandard2.1
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
