enabled ci on direct push to master

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -3,6 +3,11 @@ name: CI Pipeline
 on:
   pull_request:
     branches: [master]
+  push:
+    branches: [master]
+    paths-ignore:
+      - README.md
+      - .github/*
 
 jobs:
   build:
