--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -70,7 +70,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Download artifact
