--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -81,11 +81,13 @@ jobs:
       - name: Run a multi-line script
         shell: pwsh
         run: |
+          Push-Location psyml
           $version = git tag --points-at HEAD
-          $privateData = Import-PowerShellDataFile ./psyml/psyml.psd1 | Select-Object -ExpandProperty PrivateData
+          $privateData = Import-PowerShellDataFile ./psyml.psd1 | Select-Object -ExpandProperty PrivateData
           $privateData.PSData.Prerelease = $version.Split('-')[1]
-          $files = Get-ChildItem -Recurse ./psyml/ -File | Resolve-Path -Relative
-          Update-ModuleManifest -Path ./psyml/psyml.psd1 -ModuleVersion $version.Split('-')[0] -PrivateData $privateData -FileList $files
+          $files = Get-ChildItem -Recurse -File | Resolve-Path -Relative
+          Update-ModuleManifest -Path ./psyml.psd1 -ModuleVersion $version.Split('-')[0] -PrivateData $privateData -FileList $files
+          Pop-Location
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
