fixed publish path

--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -92,4 +92,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: psyml
-          path: artifacts/
+          path: psyml/
