--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -23,53 +23,20 @@ jobs:
         shell: pwsh
         run: |
           Get-ChildItem ./artifacts/net4.8 -Filter *.xml | Copy-Item -Destination ./artifacts/netstandard2.1
+      - name: Update module manifest
+        shell: pwsh
+        run: tools/Update-ModuleManifest.ps1
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: psyml
           path: artifacts/
 
-  # test:
-  #   strategy:
-  #     matrix:
-  #       os: [windows-latest, ubuntu-latest]
-  #   runs-on: ${{ matrix.os }}
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@master
-  #       with:
-  #         name: psyml
-  #         path: psyml
-  #     # it seems that shell parameter cannot be parametrized
-  #     - name: Perform Pester tests
-  #       if: matrix.os == 'ubuntu-latest'
-  #       shell: pwsh
-  #       run: |
-  #         Import-Module ./psyml/psyml
-  #         $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
-
-  #         if ($tests.Failed.Count -gt 0) {
-  #           Write-Error "There were $($tests.Failed.Count) errors total." -ErrorAction Stop
-  #         } else {
-  #           Write-Output "There were $($tests.Failed.Count) errors total."
-  #         }
-  #     - name: Perform Pester tests
-  #       if: matrix.os == 'windows-latest'
-  #       shell: powershell
-  #       run: |
-  #         Import-Module ./psyml/psyml
-  #         $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
-
-  #         if ($tests.Failed.Count -gt 0) {
-  #           Write-Error "There were $($tests.Failed.Count) errors total." -ErrorAction Stop
-  #         } else {
-  #           Write-Output "There were $($tests.Failed.Count) errors total."
-  #         }
-
-  publish:
-    runs-on: ubuntu-latest
+  test:
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     needs: build
     steps:
       - uses: actions/checkout@v2
@@ -78,18 +45,45 @@ jobs:
         with:
           name: psyml
           path: psyml
-      - name: Run a multi-line script
+      # it seems that shell parameter cannot be parametrized
+      - name: Perform Pester tests
+        if: matrix.os == 'ubuntu-latest'
         shell: pwsh
         run: |
-          Push-Location psyml
-          $version = git tag --points-at HEAD
-          $privateData = Import-PowerShellDataFile ./psyml.psd1 | Select-Object -ExpandProperty PrivateData
-          $privateData.PSData.Prerelease = $version.Split('-')[1]
-          $files = Get-ChildItem -Recurse -File | Resolve-Path -Relative
-          Update-ModuleManifest -Path ./psyml.psd1 -ModuleVersion $version.Split('-')[0] -PrivateData $privateData -FileList $files
-          Pop-Location
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+          Import-Module ./psyml/psyml
+          $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
+
+          if ($tests.Failed.Count -gt 0) {
+            Write-Error "There were $($tests.Failed.Count) errors total." -ErrorAction Stop
+          } else {
+            Write-Output "There were $($tests.Failed.Count) errors total."
+          }
+      - name: Perform Pester tests
+        if: matrix.os == 'windows-latest'
+        shell: powershell
+        run: |
+          Import-Module ./psyml/psyml
+          $tests = Invoke-Pester -Path ./tests/psyml.Tests.ps1 -Show Describe -PassThru
+
+          if ($tests.Failed.Count -gt 0) {
+            Write-Error "There were $($tests.Failed.Count) errors total." -ErrorAction Stop
+          } else {
+            Write-Output "There were $($tests.Failed.Count) errors total."
+          }
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@master
         with:
           name: psyml
-          path: psyml/
+          path: psyml
+      - name: Publish module
+        env:
+          NUGET_KEY: ${{ secrets.NUGET_KEY }}
+        shell: pwsh
+        run: |
+          Publish-Module -Path psyml -NuGetApiKey $env:NUGET_KEY -Verbose
