--- a/psyml.csproj
+++ b/psyml.csproj
@@ -1,21 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0</TargetFrameworks>
+    <TargetFrameworks>net5.0;net4.8</TargetFrameworks>
     <AssemblyName>psyml</AssemblyName>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <LangVersion>9.0</LangVersion>
-    <!-- <GenerateDocumentationFile Condition="'$(OS)' == 'Windows_NT'">true</GenerateDocumentationFile> -->
+    <GenerateDocumentationFile Condition="$(TargetFramework) == 'net4.8'">true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <!-- <PackageReference Include="XmlDoc2CmdletDoc" Version="0.3.0" Condition="'$(OS)' == 'Windows_NT'">
+    <PackageReference Include="XmlDoc2CmdletDoc" Version="0.3.0" Condition="'$(TargetFramework) == 'net4.8'">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference> -->
+    </PackageReference>
     <PackageReference Include="YamlDotNet" Version="9.1.0" />
   </ItemGroup>
 
@@ -25,13 +25,9 @@
     <ItemGroup>
       <OutputAssembly Include="$(TargetDir)\$(AssemblyName).dll" />
       <OutputAssembly Include="$(TargetDir)\YamlDotNet.dll" />
-      <!-- <OutputAssembly Include="$(TargetDir)\*.xml" /> -->
+      <OutputAssembly Include="$(TargetDir)\*.xml" />
     </ItemGroup>
-    <Copy SourceFiles="@(OutputAssembly)" DestinationFolder="artifacts" />
-
-    <!-- workaround as XmlDoc2CmdletDoc is not supporting dotnet core -->
-    <Copy SourceFiles="psyml.dll-Help.xml" DestinationFolder="artifacts" />
-    <Copy SourceFiles="psyml.xml" DestinationFolder="artifacts" />
+    <Copy SourceFiles="@(OutputAssembly)" DestinationFolder="artifacts\$(TargetFramework)" />
   </Target>
 
 </Project>
