--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -22,6 +22,12 @@ jobs:
         run: dotnet restore
       - name: Build net5.0
         run: dotnet build --configuration Release --no-restore --framework net5.0
+      - name: Build net4.8
+        run: dotnet build --configuration Release --no-restore --framework net4.8
+      - name: Copy .xml files to net5.0 output directory # as XmlDoc2CmdletDoc works currently only on net4.8
+        shell: pwsh
+        run: |
+          Get-ChildItem ./artifacts/net4.8 -Filter *.xml | Copy-Item -Destination ./artifacts/net5.0
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
