--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -19,10 +19,14 @@ jobs:
         run: dotnet build --configuration Release --no-restore --framework net5.0
       - name: Build net4.8
         run: dotnet build --configuration Release --no-restore --framework net4.8
-      - name: Copy .xml files to net5.0 output directory # as XmlDoc2CmdletDoc works currently only on net4.8
+      - name: Generate .dll-Help.xml file
         shell: pwsh
         run: |
-          Get-ChildItem ./artifacts/net4.8 -Filter *.xml | Copy-Item -Destination ./artifacts/net5.0
+          Install-Module platyPS -Force
+          $helpFile = New-ExternalHelp –Path ./docs/ -OutputPath ./
+          'net5.0', 'net4.8' | ForEach-Object {
+            Copy-Item $helpFile "./artifacts/$_" -Force
+          }
       - name: Update module manifest
         shell: pwsh
         run: tools/Update-ModuleManifest.ps1
